...
}

private fun defaultTopBarConfig(destination: NavDestination?): AppTopBarConfig =
    when {
        destination matches AppDestination.CharactersHome::class -> AppTopBarConfig(
            visible = true,
            title = { Text(text = "Characters") },
        )

        destination matches AppDestination.Compendium::class -> AppTopBarConfig(
            visible = true,
            title = { Text(text = "Compendium") },
        )

        destination matches AppDestination.Dice::class -> AppTopBarConfig(
            visible = true,
            title = { Text(text = "Dice Roller") },
        )
...
