...
        Row(
            modifier = Modifier
                .height(IntrinsicSize.Min)
                .padding(vertical = 8.dp),
            verticalAlignment = Alignment.CenterVertically,
        ) {
            StatBlock(title = "AC", value = ac.toString())
            StatDivider()
            StatBlock(title = "Initiative", value = signed(initiative))
            StatDivider()
            StatBlock(title = "Speed", value = speed)
        }
    }
...
