...
enum class Skill(
    val displayName: String,
    val description: List<String>,
    val ability: Ability,
) {
    ACROBATICS(
        "Acrobatics",
        listOf(
            "Your Dexterity (Acrobatics) check covers your attempt to stay on your feet in a tricky situation, such as when you're trying to run across a sheet of ice, balance on a tightrope, or stay upright on a rocking ship's deck. The GM might also call for a Dexterity (Acrobatics) check to see if you can perform acrobatic stunts, including dives, rolls, somersaults, and flips."
        ),
        Ability.DEX
    ),
    ANIMAL_HANDLING(
...
